# Tutoring

./: .gitignore  README.md  flake.nix  pyproject.toml
.virtual_documents/Preparation/02_29/: Untitled.ipynb  Untitled1.ipynb
Preparation/02_09/: custom_decorators.py  decorators.ipynb  main.ipynb  methods.ipynb
Preparation/02_15/: abs_properties_interfaces.ipynb  properties.ipynb  recursive_functions.ipynb
Preparation/02_22/: Mixins.ipynb  Mixins.md  Overloading.ipynb
Preparation/02_23/: AbstractClasses.ipynb
Preparation/02_29/: exceptions.ipynb  test_user_register.py  unittest.ipynb
Preparation/03_13/: demo_io.py
Preparation/03_13/flask_demo/: main.py
Preparation/03_13/flask_demo/instance/: app.db
Preparation/03_14/: paths.py
Preparation/03_14/flask_demo/: main.py  requirements.txt
Preparation/03_21/app/: __init__.py
Preparation/03_21/tests/: conftest.py  test_routes.py
Sessions/02_02/: main.py
Sessions/02_08/bank_app/: app.py  bank.py  bankaccount.py
Sessions/03_01/: patching.py  test_patching.py
Sessions/03_21/app/: __init__.py  models.py
Sessions/03_21/tests/: conftest.py  test_routes.py
Sessions/03_22/: main.py  test_main.py
Sessions/04_12/: README.md  main.py
