[tool.poetry]
name = "tutoring"
version = "0.1.0"
description = ""
authors = ["Simon Antonius Lauer <simon.lauer@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
sqlalchemy = "^2.0.28"
flask-sqlalchemy = "^3.1.1"
requests = "^2.31.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"


[tool.poetry.group.development.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
